create thumbnail update event